fix: resolve CORS preflight issue causing login pending in browser